force-app/main/default/objects/Work_Location__c/Work_Location__c.object-meta.xml
<CustomObject>
    <description>This object stores the all the locations of an organization</description>
    <label>Work_Location</label>
    <nameField>
        <label>Work Location Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Work_Locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>