force-app/main/default/objects/Work_Location__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>ny 4 states of India
Any 4 states of US</description>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Country__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>CITY_SUBCATEGORY</valueSetName>
    </valueSet>
</CustomField>