force-app/main/default/objects/Work_Location__c/validationRules/FIVE_DIGIT_ZIPCODE.validationRule-meta.xml
<ValidationRule>
    <fullName>FIVE_DIGIT_ZIPCODE</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISNUMBER(ZipCode__c)) 
 || LEN( (ZipCode__c)  )  &lt;&gt; 5</errorConditionFormula>
    <errorDisplayField>ZipCode__c</errorDisplayField>
    <errorMessage>ZIPCODE SHOULD BE  5 DIGIT</errorMessage>
</ValidationRule>